Settings, Footers, PendingOrders Macro

--- a/Python/templates/layouts.html
+++ b/Python/templates/layouts.html
@@ -26,6 +26,12 @@
 </head>
 <body class="{{ bodyclass }}">
 {% block content %} {% endblock %}
+<!--<footer class="py-5 bg-dark">-->
+<!--    <div class="container">-->
+<!--      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>-->
+<!--    </div>-->
+<!--    &lt;!&ndash; /.container &ndash;&gt;-->
+<!--  </footer>-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
