--- a/Python/templates/macros.html
+++ b/Python/templates/macros.html
@@ -21,6 +21,11 @@
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
+                {% if employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/pendingorder.html">Pending Orders</a>
+                    </li>
+                {% endif %}
             </ul>
             {% elif active == 'shop' %}
             <ul class="navbar-nav">
@@ -36,6 +41,11 @@
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
+                {% if employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/pendingorder.html">Pending Orders</a>
+                    </li>
+                {% endif %}
             </ul>
             {% elif active == 'shoppingcart' %}
             <ul class="navbar-nav">
@@ -51,6 +61,11 @@
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
+                {% if employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/pendingorder.html">Pending Orders</a>
+                    </li>
+                {% endif %}
             </ul>
             {% elif active == 'returns' %}
             <ul class="navbar-nav">
@@ -65,6 +80,29 @@
                 </li>
                 <li>
                     <a class="nav-item nav-link active" href="/returns.html">Returns</a>
+                </li>
+                {% if employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/pendingorder.html">Pending Orders</a>
+                    </li>
+                {% endif %}
+            </ul>
+            {% elif active == 'pending' %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="/">Home</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link" href="/shop.html">Shop</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link" href="/returns.html">Returns</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link active" href="/pendingorder.html">Pending Orders</a>
                 </li>
             </ul>
             {% else %}
@@ -81,6 +119,11 @@
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
+                {% if employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/pendingorder.html">Pending Orders</a>
+                    </li>
+                {% endif %}
             </ul>
             {% endif %}
             {% else %}
