--- a/Python/templates/payment.html
+++ b/Python/templates/payment.html
@@ -83,7 +83,7 @@
     <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
          aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <form class="modal-content" method="POST" = action="">
+            <form class="modal-content" method="POST" action="">
                 <div class="modal-header">
                     <h5 class="modal-title" id="addModalTitle">Edit Card Info</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -121,18 +121,10 @@
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         <button name="add" type="submit" class="btn btn-primary">Save changes</button>
                     </div>
-                </div>
             </form>
         </div>
     </div>
 </div>
 <!-- /.container -->
 
-<!-- Footer -->
-<footer class="py-5 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
-    </div>
-    <!-- /.container -->
-</footer>
 {% endblock content %}
