--- a/Python/templates/macros.html
+++ b/Python/templates/macros.html
@@ -15,9 +15,11 @@
                 <li>
                     <a class="nav-item nav-link" href="/shop.html">Shop</a>
                 </li>
-                <li>
-                    <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
-                </li>
+                {% if not employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
+                    </li>
+                {% endif %}
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
@@ -35,9 +37,11 @@
                 <li>
                     <a class="nav-item nav-link active" href="/shop.html">Shop</a>
                 </li>
-                <li>
-                    <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
-                </li>
+                {% if not employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
+                    </li>
+                {% endif %}
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
@@ -55,9 +59,11 @@
                 <li>
                     <a class="nav-item nav-link" href="/shop.html">Shop</a>
                 </li>
-                <li>
-                    <a class="nav-item nav-link active" href="/checkout.html">Shopping Cart</a>
-                </li>
+                {% if not employee %}
+                    <li>
+                        <a class="nav-item nav-link active" href="/checkout.html">Shopping Cart</a>
+                    </li>
+                {% endif %}
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
@@ -75,9 +81,11 @@
                 <li>
                     <a class="nav-item nav-link" href="/shop.html">Shop</a>
                 </li>
-                <li>
-                    <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
-                </li>
+                {% if not employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
+                    </li>
+                {% endif %}
                 <li>
                     <a class="nav-item nav-link active" href="/returns.html">Returns</a>
                 </li>
@@ -95,9 +103,11 @@
                 <li>
                     <a class="nav-item nav-link" href="/shop.html">Shop</a>
                 </li>
-                <li>
-                    <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
-                </li>
+                {% if not employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
+                    </li>
+                {% endif %}
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
@@ -113,9 +123,11 @@
                 <li>
                     <a class="nav-item nav-link" href="/shop.html">Shop</a>
                 </li>
-                <li>
-                    <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
-                </li>
+                {% if not employee %}
+                    <li>
+                        <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
+                    </li>
+                {% endif %}
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
