--- a/Python/templates/shop.html
+++ b/Python/templates/shop.html
@@ -9,7 +9,7 @@
 
         <div class="col-lg-3">
 
-            <h1 class="my-4">Shop Name</h1>
+            <h1 class="my-4"><img src="/static/images/favicon.jpg" width="50" height="50" class="d-inline-block align-top" alt="">  Clothing</h1>
             <div class="list-group">
                 {% for item in category %}
                 <a href="/shop.html?category={{ item[0] }}" class="list-group-item">{{ item[0] }}</a>
@@ -33,7 +33,7 @@
 
         <div class="col-lg-9">
 
-            <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+            <!--<div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -58,17 +58,17 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
-            </div>
+            </div>-->
 
             <div class="row">
                 {% for item in data %}
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
-                        <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}">
+                        <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}&quantity={{ item[4] }}&seller={{ item[5] }}&category={{ item[6] }}">
                             <img class="card-img-top" src="static/images/items/{{ item[3] }}.png"alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}">
+                                <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}&quantity={{ item[4] }}&seller={{ item[5] }}&category={{ item[6] }}">
                                     {{ item[0] }}</a>
                             </h4>
                             <h5>${{ item[1] }}</h5>
