Pending Orders Functionality

--- a/Python/templates/history.html
+++ b/Python/templates/history.html
@@ -26,7 +26,7 @@
                         <div class="float-right">
                             <h4>Ordered on {{ value[0]  }}</h4>
                             {% if value[1] == 'Y' %}
-                            <small class="text-muted float-right">Ordered Status: Completed </small>
+                            <small class="text-muted float-right">Order Status: Completed </small>
                             {% else %}
                             <small class="text-muted float-right">Order Status: Pending </small>
                             {% endif %}
